# yadro_impulse_randomusers

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  gunicorn.conf.py  pyproject.toml
docker_compose/: all.yml  app.yml  db.yml
env/: .env  .env.default
src/yadro_impulse_randomusers/adapters/: constants.py  exceptions.py  transaction_manager.py  user_repository.py  user_service.py
src/yadro_impulse_randomusers/adapters/orm/: base.py  user.py
src/yadro_impulse_randomusers/config/: app.py  config.py  db.py
src/yadro_impulse_randomusers/main/: exception_handlers.py  logs.py  web.py
src/yadro_impulse_randomusers/main/database/alembic/: __init__.py  env.py
src/yadro_impulse_randomusers/main/database/alembic/versions/: 2025_05_24-f6b9ad2f11bf_users.py
src/yadro_impulse_randomusers/main/di/: __init__.py  config.py
src/yadro_impulse_randomusers/main/di/adapters/: __init__.py  database.py  repositories.py  transaction_manager.py  users_service.py
src/yadro_impulse_randomusers/presentation/: __init__.py  rest.py
src/yadro_impulse_randomusers/presentation/dtos/: exception.py  user.py
src/yadro_impulse_randomusers/presentation/templates/: index.html  user_detail.html
tests/: conftest.py
tests/api/: test_homepage.py
tests/di/: __init__.py
tests/di/adapters/: __init__.py  database.py  repositories.py  transaction_manager.py  user_service.py
