[project]
name = "yadro-impule-randomusers"
version = "0.1.0"
description = "yadro-impule-randomusers"
authors = [{ name = "timur" }]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "dishka>=1.5.3",
    "orjson>=3.10.18",
    "uvicorn>=0.34.2",
    "ruff>=0.11.10",
    "alembic>=1.15.2",
    "colorlog>=6.9.0",
    "gunicorn>=23.0.0",
    "fastapi[all]>=0.115.12",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.10",
]

[tool.ruff]
src = ["src/yadro_impulse_randomusers" ]
lint.select = [
    'E',  # pycodestyle errors
    'W',  # pycodestyle warnings
    'F',  # pyflakes
    'I',  # isort
    'Q',  # quotes
    'TID',  # tidy imports
    'ANN',  # annotations
    'B',  # bugbear
    'SIM',  # simplify
    "T",  # Pyright-inspired type checks
]
lint.ignore = ['B008', 'B904', 'SIM105', 'B007', 'SIM108', 'ANN401']
exclude = [
    '.cache/*',
    '.venv',
]

line-length = 120
indent-width = 4
target-version = 'py313'

preview = true

[tool.pytest.ini_options]
pythonpath = "src/yadro_impulse_randomusers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"